# arxiv-scraper-bot

./: .gitignore  Dockerfile  LICENSE  README.md  arxiv_scraper.py  config.py  docker-compose.yml  main.py  models.py  pyproject.toml  requirements.txt  setup.py  start_gui.py
arxiv_scraper/: __init__.py
arxiv_scraper/cli/: main.py
arxiv_scraper/core/: config.py  models.py  scraping.py  storage.py
arxiv_scraper/gui/: main.py
arxiv_scraper/utils/: cache.py  logger.py
tests/: test_functionality.py  test_scraper.py
utils/: logger.py  scraping.py  storage.py  utils.py
